Fixed overflown and views on mobile.

--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -3195,7 +3195,7 @@ header.major:after {
     .spotlight .image {
         width: 100%;
         max-width: 60%;
-        margin: 0 0 2em 0 !important;
+        margin: 0 !important;
     }
 
     .spotlight .content {
