--- a/src/main/webapp/resources/sass/_main-decorator.scss
+++ b/src/main/webapp/resources/sass/_main-decorator.scss
@@ -197,6 +197,12 @@ input::-moz-selection {
 
 body {
   overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  background-color: $main-background-color;
+  background-image: url("images/background_head5.png"), url("images/pattern-size1.svg");
 }
 
 body.no-overflow {
